tests/agl/rejections/scope/pattern_var_escapes.agl
enum R
  | Pass
  | Fail(issues: list[text])
let r: R = Fail(issues: ["a"])
case r of
  | Fail(issues) => ()
  | Pass => ()
print issues
